2007-11-26 David Moore  <dcm@acm.org>
	* SVN 448: Update svn:ignore
	* SVN 447: Massive update of the platform specific API to support
		   the new enumeration API.  The new platform API is defined
		   in platform.h and is private to libdc1394.  Enumeration
		   functionality has split off into enumeration.c.  Some
		   naming inconsistencies of public functions have also been
		   addressed -- mostly functions in register.h.
		   dc1394_find_cameras() is now officially gone.  The examples
		   have been updated to reflect the new method of camera
		   enumeration.  Platform code for Linux, Juju, and Mac OS X
		   has been updated for the new enumeration API.

2007-11-14 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 446: Add the unit argument to the call to dc1394_new_camera
	           in juju/control.c. The argument is hardcoded to zero, so
		   you can only access the unit 0 on juju (same as on osx).
		   To be further updated...

2007-11-12 David Moore  <dcm@acm.org>
	* SVN 445: Fix mmap error with Mac OS Leopard (from Mark)

2007-11-10 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 444: Verify the format, mode, framerate and ISO speed at
	           boot time because some older cameras may have invalid
		   data there.

2007-10-31 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 443: Force the unit number to be zero on OSX, otherwise
	           compilation fails. To be updated with a proper scan of
		   units later.
	* SVN 442: Initialise some variables to zero to avoid valgrind
	           warnings (Fabien Spindler)
	* SVN 441: Don't free the raw1394 handle when we see a hub (Fabien
	           Spindler)

2007-10-25 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 440: Fixed bad #define in two example programs. Thanks to
	           Edward Rankin.
	* SVN 439: dc1394_get_one_shot never returned DC1394_TRUE but 2^31
	           instead. Fixed by Damien Delannay.

2007-10-21 Damien Douxchamps http://damien.douxchamps.net/