@@ -1,4 +1,5 @@
 2007-11-26 David Moore  <dcm@acm.org>
+	* SVN 449: Fix dc1394_multiview and dc1394_vloopback for new API
 	* SVN 448: Update svn:ignore
 	* SVN 447: Massive update of the platform specific API to support
 		   the new enumeration API.  The new platform API is defined
